2016-05-14  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/config.h.in:
        * Source/NSException.m:
        * configure.ac:
        * configure:
	Make USE_BFD control usage of libbfd and replace runtime warning with
	a configure time warning about the license issue.

2016-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSNotification.h:
	* Headers/Foundation/NSZone.h:
	* Headers/GNUstepBase/GSConfig.h.in:
	* Source/GSQuickSort.m:
	* Source/GSString.m:
	* Source/GSTimSort.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSConcretePointerFunctions.h:
	* Source/NSGarbageCollector.m:
	* Source/NSNotificationCenter.m:
	* Source/NSObject.m:
	* Source/NSThread.m:
	* Source/NSZone.m:
	Completed(?) removal of GC support.
	Plus various minor reorganisations to avoid compiler warnings.

2016-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	Fix bug encoding very long headers with no whitespace to fold on.
	* Source/NSThread.m:
	Avoid use of autorelease pool when setting the name of the thread
	(fix pointless warnings logs spotted by Wolfgang).

2016-05-06 18:03-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSString.h: Add containsString:
	* Headers/GNUstepBase/GSVersionMacros.h: Add 10.10 and 10.11 macros.
	* Source/NSString.m: Add containsString: implementation.

2016-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m:
	Check for a pool being deallocated when it has already been
	deallocated (and raise an exception).

2016-04-23  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/GSAvahiNetService.m: Avahi-based NSNetServices did crash
	upon publishing if Avahi daemon did not run. Hardened code for this
	case which also works correctly if daemon is started later on.

2016-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	Remove redundant code.  Log domain names when debug is enabled.

2016-04-08 Riccardo Mottola <rm@gnu.org>
