@@ -16,7 +16,7 @@ pl, pldes, plser, plmerge, plparse, pl2link	\- property list tools
 .BI "pldes " "filename(s)"
 .nf
 .BI "plget " "key" [ more keys ]
-.nl
+.nf
 .BI "plser " "filename(s)"
 .nf
 .BI "plmerge [ " "destination-file" " ] [ " "input-file(s)" " ]"
